<resources>
    <string name="app_name">SIGSEGV Health</string>
    <string name="user_list_name">Choose a User</string>
    <string name="height">Height:</string>
    <string name="stub_name">John Doe</string>
    <string name="stub_age_gender">21 / Male</string>
    <string name="stub_height">1.84 m</string>
    <string name="stub_weight">77 kg</string>
    <string name="stub_mission">Fitness</string>
    <string name="stub_daily_running">10000</string>
    <string name="stub_daily_calories">5000</string>
    <string name="stub_sleep_time">23:30</string>
    <string name="stub_wake_up">08:30</string>
    <string name="avatar_content_description">avatar of the user</string>
    <string name="running_content_description">running person image</string>
    <string name="fire_content_description">fire image</string>
    <string name="weight">Weight:</string>
    <string name="mission">Mission:</string>
    <string name="user_picture">User Picture</string>
    <string name="bmi">BMI</string>
    <string name="stub_bmi">23.5</string>
    <string name="body_mass_index">Body Mass Index:</string>
    <string name="daily_steps_goal">Daily Steps Goal:</string>
    <string name="daily_calories_goal">Daily Calories Goal:</string>
    <string name="sleep_time">Sleep Goal:</string>
    <string name="wake_time">Wake Up Goal:</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="border">Border</string>
    <string name="overview_title">Overview</string>
    <string name="notes_title">Your notes</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_normal_weight">Normal Weight</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obesity">Obesity</string>
    <string name="todays_focus_label">Today\'s focus:</string>
    <string name="stub_focus">Chests and Triceps</string>
    <string name="average_value">Average: %d</string>
    <string name="height_amount_in_cm">%d cm</string>
    <string name="weight_amount_in_kg">%d kg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">Reset</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>

</resources>
