<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".UserOverviewFragment">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".UserOverviewActivity">

        <ImageView
                android:contentDescription="@string/avatar_content_description"
                android:layout_width="144dp"
                android:layout_height="144dp" app:srcCompat="@drawable/ic_baseline_account_circle_24px"
                android:id="@+id/userAvatar"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/stub_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameUser"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/userAvatar"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/userAvatar"/>
        <TextView
                android:text="@string/stub_age_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ageGender" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/nameUser" app:layout_constraintStart_toEndOf="@+id/userAvatar"
                android:layout_marginStart="8dp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heightLabel" app:layout_constraintStart_toEndOf="@+id/userAvatar"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ageGender"/>
        <TextView
                android:text="@string/stub_height"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heightText" app:layout_constraintStart_toEndOf="@+id/heightLabel"
                android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/heightLabel"/>
        <TextView
                android:text="@string/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/heightText"
                app:layout_constraintBaseline_toBaselineOf="@+id/heightText" android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/stub_weight"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weightText"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView5"/>
        <TextView
                android:text="@string/mission"
                android:layout_width="57dp"
                android:layout_height="16dp"
                android:id="@+id/missionLabel"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/heightText" app:layout_constraintStart_toEndOf="@+id/userAvatar"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/stub_mission"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/missionText" app:layout_constraintStart_toEndOf="@+id/missionLabel"
                android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/missionLabel"/>
        <TextView
                android:text="@string/daily_steps_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dailyStepsLabel"
                app:layout_constraintTop_toTopOf="@+id/runningPersonImage"
                app:layout_constraintBottom_toBottomOf="@+id/runningPersonImage"
                app:layout_constraintStart_toEndOf="@+id/runningPersonImage" android:layout_marginStart="8dp"/>
        <ImageView
                android:contentDescription="@string/running_content_description"
                android:layout_width="36dp"
                android:layout_height="36dp" app:srcCompat="@drawable/ic_baseline_directions_run_24px"
                android:id="@+id/runningPersonImage"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/userAvatar"/>
        <TextView
                android:text="@string/stub_daily_running"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/dailyStepsVal" app:layout_constraintStart_toEndOf="@+id/dailyStepsLabel"
                android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/dailyStepsLabel"/>
        <ImageView
                android:contentDescription="@string/fire_content_description"
                android:layout_width="36dp"
                android:layout_height="36dp" app:srcCompat="@drawable/ic_ionicons_svg_md_flame"
                android:id="@+id/imageFire" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/runningPersonImage" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/daily_calories_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dailyCaloriesLabel" app:layout_constraintStart_toEndOf="@+id/imageFire"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageFire"
                app:layout_constraintBottom_toBottomOf="@+id/imageFire"/>
        <TextView
                android:text="@string/stub_daily_calories"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/dailyCaloriesVal" app:layout_constraintStart_toEndOf="@+id/dailyCaloriesLabel"
                android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/dailyCaloriesLabel"/>
        <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/ic_baseline_airline_seat_individual_suite_24px"
                android:id="@+id/imSleepTime"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageFire"/>
        <TextView
                android:text="@string/sleep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sleepTimeLabel" app:layout_constraintStart_toEndOf="@+id/imSleepTime"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/imSleepTime"
                app:layout_constraintBottom_toBottomOf="@+id/imSleepTime"/>
        <TextView
                android:text="@string/stub_sleep_time"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sleepTimeVal"
                app:layout_constraintBaseline_toBaselineOf="@+id/sleepTimeLabel"
                app:layout_constraintStart_toEndOf="@+id/sleepTimeLabel" android:layout_marginStart="8dp"/>
        <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp" app:srcCompat="@drawable/ic_baseline_access_alarm_24px"
                android:id="@+id/imWakeUp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imSleepTime"/>
        <TextView
                android:text="@string/wake_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wakeUpLabel"
                app:layout_constraintTop_toTopOf="@+id/imWakeUp" app:layout_constraintBottom_toBottomOf="@+id/imWakeUp"
                app:layout_constraintStart_toEndOf="@+id/imWakeUp" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/stub_wake_up"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wakeTimeVal" app:layout_constraintStart_toEndOf="@+id/wakeUpLabel"
                android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/wakeUpLabel"/>
        <TextView
                android:text="@string/bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#000"
                android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imWakeUp"/>
        <TextView
                android:text="@string/body_mass_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/stub_bmi"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/bmiValue"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/bmi_normal_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bmiMeaning" app:layout_constraintStart_toStartOf="@+id/textView4"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"/>


    </android.support.constraint.ConstraintLayout>

</FrameLayout>