<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserOverviewActivity">


    <ImageView
            android:contentDescription="@string/avatar_content_description"
            android:layout_width="144dp"
            android:layout_height="144dp" app:srcCompat="@drawable/ic_baseline_account_circle_24px"
            android:id="@+id/userAvatar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/stub_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameUser"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/userAvatar"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/userAvatar"/>
    <TextView
            android:text="@string/stub_age_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ageGender" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameUser" app:layout_constraintStart_toEndOf="@+id/userAvatar"
            android:layout_marginStart="8dp"
    android:textStyle="bold"/>
    <TextView
            android:text="@string/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightLabel" app:layout_constraintStart_toEndOf="@+id/userAvatar"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ageGender"/>
    <TextView
            android:text="@string/stub_height"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightText" app:layout_constraintStart_toEndOf="@+id/heightLabel"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/heightLabel"/>
    <TextView
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/heightText"
            app:layout_constraintBaseline_toBaselineOf="@+id/heightText" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/stub_weight"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightText"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView5"/>
    <TextView
            android:text="@string/mission"
            android:layout_width="57dp"
            android:layout_height="16dp"
            android:id="@+id/missionLabel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/heightText" app:layout_constraintStart_toEndOf="@+id/userAvatar"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/stub_mission"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/missionText" app:layout_constraintStart_toEndOf="@+id/missionLabel"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/missionLabel"/>


</android.support.constraint.ConstraintLayout>